--- a/templates/login.html
+++ b/templates/login.html
@@ -108,7 +108,7 @@
                                 <path d="M9.5 6.5a1.5 1.5 0 0 1-1 1.415l.385 1.99a.5.5 0 0 1-.491.595h-.788a.5.5 0 0 1-.49-.595l.384-1.99a1.5 1.5 0 1 1 2-1.415z"/>
                             </svg>
                         </span>
-                        <input id="inputPassword" type="password" placeholder="&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;" class="form-control" name="password">
+                        <input id="inputPassword" type="password" placeholder="&bull;&bull;&bull;&bull;&bull;&bull;&bull;&bull;" class="form-control"  onkeydown='if(event.keyCode==13){submit-button.click()}' name="password">
                     </div>
     
                     <div class="d-grid gap-2">
