--- a/templates/registration.html
+++ b/templates/registration.html
@@ -134,7 +134,7 @@
                     <input id="inputVerify" type= "text" placeholder="Verification Code" class="form-control" name="verify" aria-describedby="verifyHelp">
                 </div>
                 <div class="d-grid gap-2">
-                    <button name="send" value="yes" id="send-button" type="submit" class="btn btn-primary mb-2" style="width: 80px; margin-left: 10px;">Send</button>
+                    <button name="send" id="send-button" type="submit" class="btn btn-primary mb-2" style="width: 80px; margin-left: 10px;">Send</button>
                 </div>
             </div>
 
@@ -145,7 +145,7 @@
 
             <div class="d-grid gap-2">
                 <span style="display: none;">{% csrf_token %}</span>
-                <button name="submit" value="yes" id="submit-button" type="submit" class=" btn btn-primary mb-2">Sign Up</button>
+                <button name="submit" id="submit-button" type="submit" class=" btn btn-primary mb-2">Sign Up</button>
             </div>
         </form>
     </div> 
