--- a/templates/post.html
+++ b/templates/post.html
@@ -81,7 +81,7 @@
             </div>
         </div>
 
-        <form id="postForm" method="post" class="row g-3" style="width: 100%;">
+        <form id="postForm" method="post" enctype="multipart/form-data" class="row g-3" style="width: 100%;">
             {% csrf_token %}
             <div class="col-md-4">
                 <label class="form-label">Name: </label>
