fix fig posting and signout button

--- a/templates/post.html
+++ b/templates/post.html
@@ -42,7 +42,7 @@
                     </div>
                     <form id="signupForm" method="post" >
                         <span style="display: none;">{% csrf_token %}</span>
-                        <button name="signout" type="submit" id="signout_button" value="True" class="btn btn-primary">Sign Out</button>
+                        <button name="signout" type="submit" id="signout_button" class="btn btn-primary">Sign Out</button>
                     </form>
                     
                 </div>
