--- a/templates/post.html
+++ b/templates/post.html
@@ -123,7 +123,7 @@
             <div class="col-md-8">
                 <label class="form-label">Short Discription: </label>
                 <div class="input-group mb-2">
-                    <textarea style="width: 100%; height: 150px; font-size: large; background-color: rgba(255, 255, 255, 0.1); backdrop-filter: blur(5px); border-radius: 15px; padding: 5px; border: rgba(128, 128, 128, 0.3) 1px solid;" name="discription"></textarea>
+                    <textarea name="description" style="width: 100%; height: 150px; font-size: large; background-color: rgba(255, 255, 255, 0.1); backdrop-filter: blur(5px); border-radius: 15px; padding: 5px; border: rgba(128, 128, 128, 0.3) 1px solid;"></textarea>
                 </div>
             </div>
 
