Finish changing password

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -187,7 +187,7 @@
                 width: '400px',
                 content: '<form method="post">'
                     + '{% csrf_token %}'
-                    + '<input type="text" name="changePasswd" style=" font-size: large; padding: 3px;">'
+                    + '<input type="text" name="new_password" style=" font-size: large; padding: 3px;">'
                     + '<button id="submit-passwd" type="submit" hidden="hidden"></button>'
                     + '</form>',
                 button: {
