--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -94,12 +94,12 @@
                             $("#sign-log-button").addClass("hide-item");
                             $("#user-head-nav").removeClass("hide-item");
                             $("#hello-message").removeClass("hide-item");
-                            $("signout_button").removeClass("hide-item");
+                            $("#signout_button").removeClass("hide-item");
                         } else {
                             $("#sign-log-button").removeClass("hide-item");
                             $("#user-head-nav").addClass("hide-item");
                             $("#hello-message").addClass("hide-item");
-                            $("signout_button").addClass("hide-item");
+                            $("#signout_button").addClass("hide-item");
                         }
                     </script>
                 </div>
