--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,6 +10,19 @@
 
     <script src="/static/js/jquery.dialog.js"></script>
     <link rel="stylesheet" href="/static/css/dialog.css">
+
+
+    <script>
+        $(document).ready(function(){
+            $(".card").mouseenter(function(){
+                $(".card:hover").removeClass("shadow-pulse-inverse");
+                $(".card:hover").addClass("selectedCard shadow-pulse");
+            }).mouseleave(function(){
+                $(".selectedCard").addClass("shadow-pulse-inverse");
+                $(".selectedCard").removeClass("selectedCard shadow-pulse");
+            });
+        });
+    </script>
 </head>
 
 <body>
@@ -147,7 +160,7 @@
         </div>
     </div>
 
-    <button id="edit-intro" hidden="hidden">/button>
+    <button id="edit-intro" hidden="hidden"></button>
     <script>
         $("#discription-icon").click(function(){
             $('#edit-intro').click()
@@ -209,5 +222,75 @@
             });
         });
     </script>
+    <div class="container" style="margin-top: 100px;">
+        <a id="1" href="#" style="text-decoration: none; color: black;">
+            <div class="bg">
+                <div class="card">
+                    <div class="content">
+                        
+                    </div>
+                </div>
+            </div>
+        </a>
+        <a id="2" href="#" style="text-decoration: none; color: black;">
+            <div class="bg">
+                <div class="card">
+                    <div class="content">
+                        
+                    </div>
+                </div>
+            </div>
+        </a>
+        <a id="3" href="#" style="text-decoration: none; color: black;">
+            <div class="bg">
+                <div class="card">
+                    <div class="content">
+                        
+                    </div>
+                </div>
+            </div>
+        </a>
+        <a id="4" href="#" style="text-decoration: none; color: black;">
+            <div class="bg">
+                <div class="card">
+                    <div class="content">
+                        
+                    </div>
+                </div>
+            </div>
+        </a>
+        <a id="5" href="#" style="text-decoration: none; color: black;">
+            <div class="bg">
+                <div class="card">
+                    <div class="content">
+                    </div>
+                </div>
+            </div>
+        </a>
+        <a id="6" href="#" style="text-decoration: none; color: black;">
+            <div class="bg">
+                <div class="card">
+                    <div class="content">
+                    </div>
+                </div>
+            </div>
+        </a>
+        <a id="7" href="#" style="text-decoration: none; color: black;">
+            <div class="bg">
+                <div class="card">
+                    <div class="content">
+                    </div>
+                </div>
+            </div>
+        </a>
+        <a id="8" href="#" style="text-decoration: none; color: black;">
+            <div class="bg">
+                <div class="card">
+                    <div class="content">
+                    </div>
+                </div>
+            </div>
+        </a>
+    </div>
 </body>
 </html>
