--- a/templates/profile.html
+++ b/templates/profile.html
@@ -92,9 +92,9 @@
                     </form>
                 </div>
             </div>
-            <div style="height: 250px; width: 250px; position: absolute; z-index: -100; top: 30px; border-radius: 50%; overflow: hidden;"></div>
+            <div style="border: none; height: 250px; width: 250px; position: absolute; z-index: -100; top: 30px; border-radius: 50%; overflow: hidden;"></div>
             <div style="border: #6c757d 2px solid; height: 250px; width: 250px; position: absolute; z-index: -100; top: 30px; border-radius: 50%; overflow: hidden;">
-                <img src='{{ MEDIA_URL }}{{ user.portrait }}' height="250px" width="250px">
+                <img src='{{ MEDIA_URL }}{{ user.portrait }}' height="100%" width="100%">
             </div>
             
         </div>
