--- a/templates/profile.html
+++ b/templates/profile.html
@@ -93,7 +93,7 @@
                 </div>
             </div>
             <div style="height: 250px; width: 250px; position: absolute; z-index: -100; top: 30px; border-radius: 50%; overflow: hidden;"></div>
-            <div style="border: #6c757d 2px solid; height: 250px; width: 250px; position: absolute; z-index: -100; top: 30px; border-radius: 50%; overflow: hidden;">
+            <div style="height: 250px; width: 250px; position: absolute; z-index: -100; top: 30px; border-radius: 50%; overflow: hidden;">
                 <img src='{{ MEDIA_URL }}{{ user.portrait }}' height="250px" width="250px">
             </div>
             
