--- a/templates/login.html
+++ b/templates/login.html
@@ -98,7 +98,7 @@
                         </span>
                         <input id="inputEmail" type="email" placeholder="example@link.cuhk.edu.hk" class="form-control" name="email" aria-describedby="emailHelp">
                     </div>
-                    <label for="inputPassword" class="form-label" onkeydown= style="margin: 0; padding: 0; margin-top: 10px;">Password</label>
+                    <label for="inputPassword" class="form-label" style="margin: 0; padding: 0; margin-top: 10px;">Password</label>
                         <span style="display: none;">{% csrf_token %}</span>
                         <button name="forget_button" value="true" type="submit" class="btn btn-link" style="padding: 0; margin-left: 5px;">Forget?</button>
                     <div class="input-group mb-2">
