--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -61,7 +61,7 @@
                         <p id="hello-message" class="hide-item" style="color: white; margin-bottom: 0; font-size: larger; margin-right: 10px;">Hello, {{user.name}}!</p>
 
                         <div id="user-head-nav" class="hide-item" style="overflow: hidden;">
-                            <img src={{ MEDIA_URL }}{{ user.portrait }} width="110%" height="110%" style="position: relative; left: -5%; top: -5%;">
+                            <img src="{{ MEDIA_URL }}{{ user.portrait }}" width="110%" height="110%" style="position: relative; left: -5%; top: -5%;">
                         </div>
 
                         <form id="signupForm" method="post" >
