--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -210,21 +210,26 @@
             <button id="show-more" type="button" class="btn btn-primary btn-lg" style="position: relative; top: -60px;">Show More</button>        
         </div>
 
+        <form id="count-form" hidden>
+            <input type="text" name="count" id="count-num" value="0">
+        </form>
+
         <script>
-            var times = 1
             $("#show-more").click(function(){
-                for (i=0; i<6; i++){
-                    $(".container").append('<a id="0" href="#" style="text-decoration: none; color: black;"><div class="bg"><div class="card"><div class="content"></div></div></div></a>')
-                    $(".container a:last-child").attr("id", i+1+6*times)
-                    $(".card").mouseenter(function(){
-                        $(".card:hover").removeClass("shadow-pulse-inverse");
-                        $(".card:hover").addClass("selectedCard shadow-pulse");
-                    }).mouseleave(function(){
-                        $(".selectedCard").addClass("shadow-pulse-inverse");
-                        $(".selectedCard").removeClass("selectedCard shadow-pulse");
-                    });
-                }
-                times = times + 1
+                // for (i=0; i<6; i++){
+                //     $(".container").append('<a id="0" href="#" style="text-decoration: none; color: black;"><div class="bg"><div class="card"><div class="content"></div></div></div></a>')
+                //     $(".container a:last-child").attr("id", i+1+6*times)
+                //     $(".card").mouseenter(function(){
+                //         $(".card:hover").removeClass("shadow-pulse-inverse");
+                //         $(".card:hover").addClass("selectedCard shadow-pulse");
+                //     }).mouseleave(function(){
+                //         $(".selectedCard").addClass("shadow-pulse-inverse");
+                //         $(".selectedCard").removeClass("selectedCard shadow-pulse");
+                //     });
+                // }
+                // times = times + 1
+                document.getElementById("count-num").value = document.getElementById("count-num").value + 6;
+                $("#count-form").submit;
             })
         </script>
 
