--- a/templates/profile.html
+++ b/templates/profile.html
@@ -223,74 +223,21 @@
         });
     </script>
     <div class="container" style="margin-top: 100px;">
-        <a id="1" href="#" style="text-decoration: none; color: black;">
+        {% for merchandise in merchandises %}
+        <a id={{ forloop.counter }} href="#" style="text-decoration: none; color: black;">
             <div class="bg">
                 <div class="card">
                     <div class="content">
-                        
+                        <img src='{{ MEDIA_URL }}{{ merchandise.image_1 }}'>
+                        <h3 class="good-name">
+                                    {{merchandise.name}}
+                                </h3>
+                                <h2>${{merchandise.price}}HKD</h2>
                     </div>
                 </div>
             </div>
         </a>
-        <a id="2" href="#" style="text-decoration: none; color: black;">
-            <div class="bg">
-                <div class="card">
-                    <div class="content">
-                        
-                    </div>
-                </div>
-            </div>
-        </a>
-        <a id="3" href="#" style="text-decoration: none; color: black;">
-            <div class="bg">
-                <div class="card">
-                    <div class="content">
-                        
-                    </div>
-                </div>
-            </div>
-        </a>
-        <a id="4" href="#" style="text-decoration: none; color: black;">
-            <div class="bg">
-                <div class="card">
-                    <div class="content">
-                        
-                    </div>
-                </div>
-            </div>
-        </a>
-        <a id="5" href="#" style="text-decoration: none; color: black;">
-            <div class="bg">
-                <div class="card">
-                    <div class="content">
-                    </div>
-                </div>
-            </div>
-        </a>
-        <a id="6" href="#" style="text-decoration: none; color: black;">
-            <div class="bg">
-                <div class="card">
-                    <div class="content">
-                    </div>
-                </div>
-            </div>
-        </a>
-        <a id="7" href="#" style="text-decoration: none; color: black;">
-            <div class="bg">
-                <div class="card">
-                    <div class="content">
-                    </div>
-                </div>
-            </div>
-        </a>
-        <a id="8" href="#" style="text-decoration: none; color: black;">
-            <div class="bg">
-                <div class="card">
-                    <div class="content">
-                    </div>
-                </div>
-            </div>
-        </a>
+        {% endfor %}
     </div>
 </body>
 </html>
