--- a/templates/post.html
+++ b/templates/post.html
@@ -132,7 +132,7 @@
                 <div class="container">
                     <div class="bg" style="width: 230px; height: 350px;">
                         <div class="card">
-                            <div class="content">
+                            <div class="content" style="display: flex; flex-direction: column; justify-content: center;">
                                 <a href="javascript:void(0)" id="pic1" onclick="upload('pic1');" style="position: relative; top: 0; left: 0; z-index: 100">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
                                         <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
@@ -140,7 +140,7 @@
                                     </svg>
                                 </a>
 
-                                <img class="upload-imgs hide-item" id="pic1-img" src="#">
+                                <img class="upload-imgs hide-item" id="pic1-img" src="#" style="height:100%">
 
                                 <input id="pic1-submit" type="file" name="pic-1" onchange="loadPic('pic1');" style="display: none;">
                             </div>
@@ -148,7 +148,7 @@
                     </div>
                     <div class="bg" style="width: 230px; height: 350px;">
                         <div class="card">
-                            <div class="content">
+                            <div class="content" style="display: flex; flex-direction: column; justify-content: center;"> 
                                 <a href="javascript:void(0)" id="pic2" onclick="upload('pic2');" style="position: relative; top: 0; left: 0; z-index: 100">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
                                         <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
@@ -156,7 +156,7 @@
                                     </svg>
                                 </a>
 
-                                <img class="upload-imgs hide-item" id="pic2-img" src="#">
+                                <img class="upload-imgs hide-item" id="pic2-img" src="#" style="height:100%">
                                 
                                 <input id="pic2-submit" type="file" name="pic-2" onchange="loadPic('pic2');" style="display: none;">
                             </div>
@@ -164,7 +164,7 @@
                     </div>
                     <div class="bg" style="width: 230px; height: 350px;">
                         <div class="card">
-                            <div class="content">
+                            <div class="content" style="display: flex; flex-direction: column; justify-content: center;">
                                 <a href="javascript:void(0)" id="pic3" onclick="upload('pic3');" style="position: relative; top: 0; left: 0; z-index: 100">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
                                         <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
@@ -172,7 +172,7 @@
                                     </svg>
                                 </a>
 
-                                <img class="upload-imgs hide-item" id="pic3-img" src="#">
+                                <img class="upload-imgs hide-item" id="pic3-img" src="#" style="height:100%">
 
                                 <input id="pic3-submit" type="file" name="pic-3" onchange="loadPic('pic3');" style="display: none;">
                             </div>
@@ -180,7 +180,7 @@
                     </div>
                     <div class="bg" style="width: 230px; height: 350px;">
                         <div class="card">
-                            <div class="content">
+                            <div class="content" style="display: flex; flex-direction: column; justify-content: center;">
                                 <a href="javascript:void(0)" id="pic4" onclick="upload('pic4');" style="position: relative; top: 0; left: 0; z-index: 100">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
                                         <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
@@ -188,7 +188,7 @@
                                     </svg>
                                 </a>
 
-                                <img class="upload-imgs hide-item" id="pic4-img" src="#">
+                                <img class="upload-imgs hide-item" id="pic4-img" src="#" style="height:100%">
                                
                                 <input id="pic4-submit" type="file" name="pic-4" onchange="loadPic('pic4');" style="display: none;">
                             </div>
