--- a/templates/post.html
+++ b/templates/post.html
@@ -132,7 +132,7 @@
                 <div class="container">
                     <div class="bg" style="width: 230px; height: 350px;">
                         <div class="card">
-                            <div class="content">
+                            <div class="content" style="display: flex; flex-direction: column; justify-content: center;">
                                 <a href="javascript:void(0)" id="pic1" onclick="upload('pic1');" style="position: relative; top: 0; left: 0; z-index: 100">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="100" height="100" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
                                         <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
