--- a/templates/merchandise.html
+++ b/templates/merchandise.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Profile</title>
+    <title>Merchandise</title>
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
     <link href="/static/css/style.css" rel="stylesheet">
     <script src="/static/js/bootstrap.bundle.min.js"></script>
