--- a/templates/profile.html
+++ b/templates/profile.html
@@ -224,13 +224,13 @@
     </script>
     <div class="container" style="margin-top: 100px;">
         {% for merchandise in merchandises %}
-        <a id={{ forloop.counter }} href="#" style="text-decoration: none; color: black;">
+        <a id={{ forloop.counter }} href="/merchandise/{{ merchandise.mid }}" style="text-decoration: none; color: black;">
             <div class="bg">
                 <div class="card">
                     <div class="content">
                         <form method="post" id="delete">
-                            
-
+                            {% csrf_token %}
+                            <input type="text" name="delete" value={{ merchandise.mid }} hidden="hidden">
                         </form>
                         <a href="#" style="z-index: 100; position: absolute; opacity: 1; top: 89%; left: 88%;" onclick="$('#delete').submit()">
                             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="black" class="bi bi-trash3" viewBox="0 0 16 16">
