--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,6 +5,7 @@ html, body{
 body {
   padding-top: 4rem;
   background-image: linear-gradient(90deg, #ffe07a, #d57aff);
+  background-repeat: no-repeat;
   font-family: Arial, Helvetica, sans-serif;
 }
 .hide-item {
