--- a/templates/merchandise.html
+++ b/templates/merchandise.html
@@ -63,7 +63,8 @@
             <img src="{{ MEDIA_URL }}{{ user.portrait }}" style="border: #6c757d 2px solid; border-radius: 50%; height: 200px; width: 200px; margin: 20px;">
             <div class="user-info" style="display: flex; flex-direction: column; justify-content: end;">
                 <p style="font-size: x-large;">User Name: {{user.name}}</p>
-                <p style="font-size: x-large;">Contact Info: {{user.email}}</p>
+                <p style="font-size: x-large;">User Email: {{user.email}}</p>
+                <p style="font-size: x-large;">Contact Info: {{merchandise.contact}}</p>
             </div>
 
 
@@ -117,7 +118,7 @@
             <div>
                 <h2 style="margin-left: 20px; color: purple; font-weight: bolder;">${{merchandise.price}}HKD</h2>
                 <p style="margin-left: 20px; font-size: x-large; font-weight: bold;">Merchandise name: {{merchandise.name}}</p>
-                <p style="margin-left: 20px; font-size: x-large; font-weight: bold; position: relative; top: -20px;">discription: </p>
+                <p style="margin-left: 20px; font-size: x-large; font-weight: bold; position: relative; top: -20px;">Discription: </p>
                 <p style="margin-left: 20px; width: 300px; position: relative; top: -35px;">{{ merchandise.description }}</p>
                 <p style="margin-left: 20px;">Posted on: {{merchandise.pub_date}}</p>
             </div>
