--- a/templates/post.html
+++ b/templates/post.html
@@ -108,7 +108,7 @@
             </div>
             
             <div class="col-md-8">
-                <label class="form-label">Keyword: </label>
+                <label class="form-label">Contact: </label>
                 <div class="input-group mb-2">
                     <span class="input-group-text">
                         <svg xmlns="http://www.w3.org/2000/svg" color="gray" width="24" height="24" fill="currentColor" class="bi bi-exclamation-circle" viewBox="0 0 16 16">
@@ -116,7 +116,7 @@
                             <path d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z"/>
                         </svg>
                     </span>
-                    <input id="postKeyword" type="text" class="form-control" placeholder="Seperate by Comma" name="postKeyword" style="background-color: rgba(255, 255, 255, 0.1); backdrop-filter: blur(5px);">
+                    <input id="postContact" type="text" class="form-control" placeholder="Seperate by Comma" name="postContact" style="background-color: rgba(255, 255, 255, 0.1); backdrop-filter: blur(5px);">
                 </div>
             </div>
 
