--- a/templates/merchandise.html
+++ b/templates/merchandise.html
@@ -67,9 +67,13 @@
                 <p style="font-size: x-large;">Contact Info: {{merchandise.contact}}</p>
             </div>
 
+            <form id="like-form" hidden>
+                <input name="?" id="like-submit">
+            </form>
+
 
             <div style="position: absolute; right:5%; top: 2%;">
-                <a id="before-like" href="javascript:" style="color: black; text-decoration: none;">
+                <a id="before-like" href="javascript:" style="color: black; text-decoration: none;" onclick="document.getElementById('like-submit').value='beLiked'; $('#like-form').submit();">
                     <svg id="empty" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
                         <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
                     </svg>
@@ -89,7 +93,7 @@
                     </script>
                     <span style="font-size: x-large;">Add to wish list</span>
                 </a>
-                <a id="after-like" href="javascript:" style="color: black; text-decoration: none;">
+                <a id="after-like" onclick="document.getElementById('like-submit').value='beDisliked'; $('#like-form').submit();" href="javascript:" style="color: black; text-decoration: none;" class="hide-item">
                     <svg id="filled-after" xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="rgb(248, 85, 115)" class="bi bi-heart-fill" viewBox="0 0 16 16">
                         <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
                     </svg>
@@ -109,6 +113,15 @@
                     </script>
                     <span style="font-size: x-large;">{{merchandise.Liked}} people like it</span>
                 </a>
+
+                <script>
+                    var liked = '{{isLiked}}';
+                    if (liked == 'True'){
+                        $('#before-like').addClass('hide-item');
+                        $('#after-like').removeClass('hide-item');
+                    }
+                </script>
+
             </div>
         </div>
 
