--- a/templates/profile.html
+++ b/templates/profile.html
@@ -79,9 +79,9 @@
 
     <div class="card-box" style="width: 90%; margin: 0 auto; margin-top: 30px; justify-content: space-between;">
 
-        <button id="change-passwd" class="btn btn-primary" style="position: absolute; z-index: 100; left:85%; top: 5%">Change Password</button>
+        <button id="change-passwd" class="btn btn-primary" style="position: absolute; right: 5%; top: 8%;">Change Password</button>
 
-        <div id="user-head">
+        <div id="user-head" style="border: none;">
             <div id="edit-box" class="edit-box transparent">
                 <div style="width: 100%; display: flex; justify-content: center; padding-top: 12px;">
                     <form id="upload" action="/templates/profile.html/" method = "post" enctype="multipart/form-data" onchange="submit.click()">
@@ -92,7 +92,7 @@
                     </form>
                 </div>
             </div>
-            <div style="border: none; height: 250px; width: 250px; position: absolute; z-index: -100; top: 30px; border-radius: 50%; overflow: hidden;"></div>
+           
             <div style="border: #6c757d 2px solid; height: 250px; width: 250px; position: absolute; z-index: -100; top: 30px; border-radius: 50%; overflow: hidden;">
                 <img src="{{ MEDIA_URL }}{{ user.portrait }}" height="100%" width="100%">
             </div>
@@ -110,7 +110,7 @@
             });
         </script>
 
-        <div id="userName-box" style="display: flex; margin-top: 10px;">
+        <div id="userName-box" style="display: flex; margin-top: 20px;">
             <p id="userName" style="font-size: xx-large; margin-left: 40px;">
                 <b>{{user.name}}</b>
             </p>
@@ -157,7 +157,17 @@
                     $("#discription-icon").addClass("transparent").css("pointer-events","none")
                 });
             </script>
+
+            <ul class="nav nav-pills" style="position: absolute; bottom: 0; width: 50%; display: flex; justify-content: space-between;">
+                <li class="nav-item">
+                <a class="nav-link active" href="/templates/profile.html">My Goods</a>
+                </li>
+                <li class="nav-item" >
+                    <a class="nav-link" href="/templates/liked.html">My Likes</a>
+                </li>
+            </ul>
         </div>
+        
     </div>
 
     <button id="edit-intro" hidden="hidden"></button>
@@ -200,7 +210,8 @@
                 width: '400px',
                 content: '<form method="post">'
                     + '{% csrf_token %}'
-                    + '<input type="text" name="new_password" style=" font-size: large; padding: 3px;">'
+                    + '<p>Input your new password:</p>'
+                    + '<input type="text" name="new_password" style=" font-size: large; padding: 3px; width: 100%">'
                     + '<button id="submit-passwd" type="submit" hidden="hidden"></button>'
                     + '</form>',
                 button: {
@@ -229,9 +240,9 @@
     </form>
 
     <script>
-        function dialog(){
+        function dialog(value){
             $.sendConfirm({
-                title: 'Error!',
+                title: 'Warning!',
                 withNoMinWidth: true,
                 width: '400px',
                 content: 'Are you sure to delete this item?',
@@ -240,7 +251,8 @@
                     cancel: 'Cancel'
                 },
                 onConfirm: function() {
-                    window.open('/templates/profile.html', '_self');
+                    document.getElementById('delete-text').value=value;
+                    $('#delete').submit()
                 },
                 onCancel: function() {
                     console.log('点击取消！');
@@ -257,7 +269,7 @@
                 <div class="bg">
                     <div class="card">
                         <div class="content">
-                            <a href="#" style="z-index: 100; position: absolute; opacity: 1; top: 89%; left: 88%;" onclick="document.getElementById('delete-text').value='{{ merchandise.mid }}'; $('#delete').submit()">
+                            <a href="javascript:" style="z-index: 100; position: absolute; opacity: 1; top: 89%; left: 88%;" onclick="dialog('{{ merchandise.mid }}')">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="black" class="bi bi-trash3" viewBox="0 0 16 16">
                                     <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z"/>
                                 </svg>
@@ -279,5 +291,6 @@
             </a>
         {% endfor %}
     </div>
+    <div style="height: 50px;"></div>
 </body>
 </html>
