--- a/templates/liked.html
+++ b/templates/liked.html
@@ -236,7 +236,7 @@
 
     <form method="post" id="dislike">
         {% csrf_token %}
-        <input id="dislike-text" type="text" name="dislike" hidden="hidden">
+        <input id="dislike-text" type="text" name="dislike" value="{{ merchandise.mid }}" hidden="hidden">
     </form>
 
     <script>
@@ -288,7 +288,6 @@
                         </div>
                     </div>
                 </div>
-            </a>
         {% endfor %}
     </div>
     <div style="height: 50px;"></div>
