--- a/templates/error.html
+++ b/templates/error.html
@@ -20,7 +20,7 @@
                         <li><a href="mainpage.html" class="nav-link px-2 text-white top_item">Home</a></li>
                         <li><a href="#" class="nav-link px-2 text-white top_item">Profile</a></li>
                         <li><a href="#" class="nav-link px-2 text-white top_item">Liked</a></li>
-                        <li><a href="#" class="nav-link px-2 text-white top_item">Chat</a></li>
+{#                        <li><a href="#" class="nav-link px-2 text-white top_item">Chat</a></li>#}
                         <li><a target="_blank" href="https://github.com/1155141394/CuSell" class="nav-link px-2 text-white top_item">About Us</a></li>
                     </ul>
             </div>
