--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -52,7 +52,7 @@
                                 });
                             </script> -->
                             <li><a id="post" href="#" class="nav-link px-2 text-white top_item">Post</a></li>
-                            <li><a href="#" class="nav-link px-2 text-white top_item">Chat</a></li>
+{#                            <li><a href="#" class="nav-link px-2 text-white top_item">Chat</a></li>#}
                             <li><a target="_blank" href="https://github.com/1155141394/CuSell" class="nav-link px-2 text-white top_item">About Us</a></li>
                         </ul>
                     </div>
