--- a/templates/post.html
+++ b/templates/post.html
@@ -30,7 +30,7 @@
                                 <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
                             </svg>
                             Post</a></li>
-                        <li><a href="#" class="nav-link px-2 text-white top_item">Chat</a></li>
+{#                        <li><a href="#" class="nav-link px-2 text-white top_item">Chat</a></li>#}
                         <li><a target="_blank" href="https://github.com/1155141394/CuSell" class="nav-link px-2 text-white top_item">About Us</a></li>
                     </ul>
                 </div>
@@ -116,7 +116,7 @@
                             <path d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z"/>
                         </svg>
                     </span>
-                    <input id="postContact" type="text" class="form-control" placeholder="Seperate by Comma" name="postContact" style="background-color: rgba(255, 255, 255, 0.1); backdrop-filter: blur(5px);">
+                    <input id="postContact" type="text" class="form-control" placeholder="e.g. Phone: 1234 5678" name="postContact" style="background-color: rgba(255, 255, 255, 0.1); backdrop-filter: blur(5px);">
                 </div>
             </div>
 
