--- a/templates/profile.html
+++ b/templates/profile.html
@@ -43,7 +43,7 @@
                             </svg>
                             Profile</a></li>
                         <li><a href="/templates/post.html" class="nav-link px-2 text-white top_item">Post</a></li>
-                        <li><a href="#" class="nav-link px-2 text-white top_item">Chat</a></li>
+{#                        <li><a href="#" class="nav-link px-2 text-white top_item">Chat</a></li>#}
                         <li><a target="_blank" href="https://github.com/1155141394/CuSell" class="nav-link px-2 text-white top_item">About Us</a></li>
                     </ul>
                 </div>
