--- a/templates/registration.html
+++ b/templates/registration.html
@@ -26,7 +26,7 @@
                         <li><a href="/templates/mainpage.html" class="nav-link px-2 text-white top_item">Home</a></li>
                         <li><a href="#" class="nav-link px-2 text-white top_item">Profile</a></li>
                         <li><a href="#" class="nav-link px-2 text-white top_item">Post</a></li>
-                        <li><a href="#" class="nav-link px-2 text-white top_item">Chat</a></li>
+{#                        <li><a href="#" class="nav-link px-2 text-white top_item">Chat</a></li>#}
                         <li><a target="_blank" href="https://github.com/1155141394/CuSell" class="nav-link px-2 text-white top_item">About Us</a></li>
                     </ul>
                 </div>
@@ -165,7 +165,7 @@
                 email: {
                     required: true,
                     email: true,
-                    cuEmail: true
+                    {#cuEmail: true#}
                 },
                 password: {
                     required: true,
